# marytts-pico

./: Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yaml  tts-post-form.sh  tts-post-multipart.sh
src/: main.rs
