[package]
name = "marytts-pico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde_urlencoded = "0.7.0"
uuid = { version = "1", features = ["v4" ] }
env_logger = "0.9"
